test/cases/parser/ArgError.errors
src/ArgError.b:3:14: Syntax error (expected argument name)
